First Upload Code

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 
 # Log file
 *.log
+.idea
+
+# Out Info
+out
 
 # BlueJ files
 *.ctxt
@@ -18,6 +22,8 @@
 *.zip
 *.tar.gz
 *.rar
+
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
